<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChatActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_message_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/send_chat_message_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbars="vertical" />


    <EditText
        android:id="@+id/chat_message_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/send_chat_message_button" />

    <Button
        android:id="@+id/send_chat_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="SEND" />

</RelativeLayout>
